--- a/Resume.html
+++ b/Resume.html
@@ -5,27 +5,50 @@
 	<link rel="stylesheet" type="text/css" href="StyleResume.css">
 </head>
 <body>
-	<div>
+	<div class="grid_cont">
+	<div class="name">
 		<h1>ABDULLAH MAQABLEH</h1>
-			<h2>Computer Engineer</h2>
-				<h5> I am Gratuated form Al- Balqa' Applied University (BAU)</h5>
-				<img src="abdullah.png">
+			<h2 >Computer Engineer</h2>
+				<p style="display: inline;"> I am Gratuated form Al- Balqa' Applied University (BAU)</p>
 	</div>
-	<div>
+	<div class="img"><img src="abdullah.png" align="right"></div>
+	<div class="ex">
 		<h1>EXPERIENCE</h1>
 	     <h5> Technical Support </h5>
 	   	 <h5> Smart Tech</h5>
 	     <h5>2014</h5>
-	     <
+	     
+
+	</div>
+	<div class="skill">
+		<h1>PROFESIONL SKILL</h1>
+			<ul>
+				<li>CCNA</li>
+				<li>HTML&CSS</li>
+				<li>Linux administrator</li>
+			</ul>
+		<h1>PERSONLA SKILL</h1>		
+	
+	<div class="edu">
+		<h1>EDUCATION</h1>
+			<h5>2012-2016</h5>
 
 	</div>
 	<div>
-		<h1>PROFESIONL SKILL</h1>
-			<ul>
-				<li></li>
-			</ul>		
+		<h1>AWARD</h1>
 
-
+	</div>
+	<div>
+		<h1> INTEREST</h1>
+		 	<ul>
+		 		<li>Education</li>
+		 		<li>Tecnology</li>
+		 	</ul>	
+	</div>
+	<div class="contact">
+		<h5>+962788048309</h5>
+		<h5>abd.maqableh@gmail.com</h5>
+		<a href="https://www.linkedin.com/in/abdullah-maqableh-81135567/" _blank>LinkedIn</a>
 
 
 
@@ -34,9 +57,7 @@
 
 
 
-
-
-
+	</div>
 
 
 </body>
