firstRuseme final day

--- a/Resume.html
+++ b/Resume.html
@@ -3,23 +3,33 @@
 <head>
 	<title> ABDULLAH MAQABLEH </title>
 	<link rel="stylesheet" type="text/css" href="StyleResume.css">
+	<link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="grid_cont">
 	<div class="name">
-		<h1>ABDULLAH MAQABLEH</h1>
-			<h2 >Computer Engineer</h2>
+		<h1 style="display: inline;">ABDULLAH MAQABLEH</h1>
+		<br>
+			<h2 style="display: inline;" >Computer Engineer</h2>
+			<br>
 				<p style="display: inline;"> I am Gratuated form Al- Balqa' Applied University (BAU)</p>
+					<div class="img"><img src="abdullah.png" align="right"></div>
 	</div>
-	<div class="img"><img src="abdullah.png" align="right"></div>
+	
+	
 	<div class="ex">
 		<h1>EXPERIENCE</h1>
-	     <h5> Technical Support </h5>
-	   	 <h5> Smart Tech</h5>
-	     <h5>2014</h5>
-	     
+	     	<h5> Technical Support </h5>
+	   	 	<h5> Smart Tech</h5>
+	     	<h5>2014</h5> 
+	 <div class="edu">
+		<h1>EDUCATION</h1>
+			<h5>2012-2016</h5>
+
+	</div>  	  
 
 	</div>
+
 	<div class="skill">
 		<h1>PROFESIONL SKILL</h1>
 			<ul>
@@ -28,12 +38,8 @@
 				<li>Linux administrator</li>
 			</ul>
 		<h1>PERSONLA SKILL</h1>		
-	
-	<div class="edu">
-		<h1>EDUCATION</h1>
-			<h5>2012-2016</h5>
-
 	</div>
+	
 	<div>
 		<h1>AWARD</h1>
 
@@ -46,15 +52,9 @@
 		 	</ul>	
 	</div>
 	<div class="contact">
-		<h5>+962788048309</h5>
-		<h5>abd.maqableh@gmail.com</h5>
+		<h5 style="display: inline;">+962788048309</h5>
+		<h5 style="display: inline;" >abd.maqableh@gmail.com</h5>
 		<a href="https://www.linkedin.com/in/abdullah-maqableh-81135567/" _blank>LinkedIn</a>
-
-
-
-	</div>
-
-
 
 
 	</div>
